feat: story pagging with remote mediator and unit testing