@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
+    id ("kotlin-kapt")
 }
 
 android {
@@ -44,7 +45,13 @@ android {
     }
 
     buildFeatures {
+        buildConfig = true
         viewBinding = true
+        dataBinding = true
+    }
+
+    tasks.withType<Test> {
+        jvmArgs("-Dnet.bytebuddy.experimental=true")
     }
 }
 
@@ -65,13 +72,39 @@ dependencies {
     implementation (libs.androidx.lifecycle.livedata.ktx)
     implementation (libs.material.v190)
     implementation (libs.glide)
-    implementation(libs.androidx.databinding.compiler.common)
+    implementation (libs.androidx.databinding.compiler.common)
     implementation (libs.okhttp)
 
     implementation (libs.play.services.maps)
     implementation (libs.play.services.location)
+    implementation (libs.androidx.paging.runtime)
+    implementation(libs.androidx.room.common)
+    implementation (libs.androidx.room.paging)
+    kapt (libs.androidx.room.compiler)
+    implementation(libs.androidx.room.ktx)
 
     testImplementation(libs.junit)
-    androidTestImplementation(libs.androidx.junit)
+    testImplementation (libs.mockito.core)
+    testImplementation (libs.androidx.core.testing)
+    testImplementation (libs.androidx.paging.common)
+    testImplementation (libs.androidx.paging.common.v311)
+    testImplementation (libs.kotlinx.coroutines.test)
+    testImplementation (libs.lifecycle.viewmodel.ktx.v250)
+    testImplementation (libs.androidx.paging.runtime.v311)
+    testImplementation (libs.mockito.inline)
+    testImplementation (libs.mockk)
+    testImplementation (libs.turbine)
+    testImplementation (libs.kotlinx.coroutines.test.v170)
+    testImplementation (libs.androidx.core)
+    testImplementation (libs.androidx.core.testing.v210)
+    implementation (libs.kotlinx.coroutines.core)
+    implementation (libs.kotlinx.coroutines.android)
+    testImplementation (libs.kotlinx.coroutines.test.v173)
+
+    androidTestImplementation (libs.androidx.espresso.idling.resource)
+    androidTestImplementation (libs.androidx.uiautomator)
+    androidTestImplementation (libs.androidx.junit.ktx)
+    androidTestImplementation (libs.core.ktx)
+    androidTestImplementation (libs.androidx.runner)
     androidTestImplementation(libs.androidx.espresso.core)
 }
